data cleaning changes

--- a/DataCleaning.ipynb
+++ b/DataCleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -222,7 +222,7 @@
        "[5 rows x 312 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -334,13 +334,13 @@
        "4      Cook County   658233.0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Remove unuseful columns\n",
+    "#Keep columns we need for analysis\n",
     "zillow_zhvi_latest_df = pd.DataFrame(zillow_zhvi_df[['RegionName','StateName','City','Metro','CountyName','2021-03-31']])\n",
     "zillow_zhvi_latest_df = zillow_zhvi_latest_df.rename(columns={\"2021-03-31\":\"HomeValue\"})\n",
     "#Grab the latest month data\n",
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "4            88058.0         5614.0      7.802207  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,296 +504,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RegionName</th>\n",
-       "      <th>StateName</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Metro</th>\n",
-       "      <th>CountyName</th>\n",
-       "      <th>HomeValue</th>\n",
-       "      <th>Zipcode</th>\n",
-       "      <th>Population</th>\n",
-       "      <th>Median Age</th>\n",
-       "      <th>Household Income</th>\n",
-       "      <th>Per Capita Income</th>\n",
-       "      <th>Poverty Count</th>\n",
-       "      <th>Poverty Rate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>6989.000000</td>\n",
-       "      <td>6989</td>\n",
-       "      <td>6989</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6989</td>\n",
-       "      <td>6.989000e+03</td>\n",
-       "      <td>6989.000000</td>\n",
-       "      <td>6989.000000</td>\n",
-       "      <td>6.989000e+03</td>\n",
-       "      <td>6.989000e+03</td>\n",
-       "      <td>6.934000e+03</td>\n",
-       "      <td>6989.000000</td>\n",
-       "      <td>6969.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>unique</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>45</td>\n",
-       "      <td>5116</td>\n",
-       "      <td>0</td>\n",
-       "      <td>796</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>top</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>IA</td>\n",
-       "      <td>Hillsboro</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Greene County</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>freq</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>482</td>\n",
-       "      <td>13</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>84</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>51783.884676</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.410105e+05</td>\n",
-       "      <td>51783.884676</td>\n",
-       "      <td>2452.674202</td>\n",
-       "      <td>-6.009398e+06</td>\n",
-       "      <td>-3.896688e+07</td>\n",
-       "      <td>-1.896156e+06</td>\n",
-       "      <td>390.662040</td>\n",
-       "      <td>14.919540</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>23318.881500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9.110066e+04</td>\n",
-       "      <td>23318.881500</td>\n",
-       "      <td>3344.868668</td>\n",
-       "      <td>6.301389e+07</td>\n",
-       "      <td>1.565063e+08</td>\n",
-       "      <td>3.575637e+07</td>\n",
-       "      <td>631.664106</td>\n",
-       "      <td>10.383842</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>705.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.526200e+04</td>\n",
-       "      <td>705.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-6.666667e+08</td>\n",
-       "      <td>-6.666667e+08</td>\n",
-       "      <td>-6.666667e+08</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>36075.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8.510100e+04</td>\n",
-       "      <td>36075.000000</td>\n",
-       "      <td>453.000000</td>\n",
-       "      <td>3.970000e+01</td>\n",
-       "      <td>3.857100e+04</td>\n",
-       "      <td>2.166625e+04</td>\n",
-       "      <td>50.000000</td>\n",
-       "      <td>8.125963</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>54006.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.170570e+05</td>\n",
-       "      <td>54006.000000</td>\n",
-       "      <td>1181.000000</td>\n",
-       "      <td>4.480000e+01</td>\n",
-       "      <td>4.800000e+04</td>\n",
-       "      <td>2.587150e+04</td>\n",
-       "      <td>155.000000</td>\n",
-       "      <td>13.169533</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>68828.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.692170e+05</td>\n",
-       "      <td>68828.000000</td>\n",
-       "      <td>2903.000000</td>\n",
-       "      <td>5.100000e+01</td>\n",
-       "      <td>5.675000e+04</td>\n",
-       "      <td>3.025600e+04</td>\n",
-       "      <td>444.000000</td>\n",
-       "      <td>19.540230</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>99833.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.769499e+06</td>\n",
-       "      <td>99833.000000</td>\n",
-       "      <td>34366.000000</td>\n",
-       "      <td>8.810000e+01</td>\n",
-       "      <td>1.807270e+05</td>\n",
-       "      <td>2.172870e+05</td>\n",
-       "      <td>10010.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          RegionName StateName       City Metro     CountyName     HomeValue  \\\n",
-       "count    6989.000000      6989       6989     0           6989  6.989000e+03   \n",
-       "unique           NaN        45       5116     0            796           NaN   \n",
-       "top              NaN        IA  Hillsboro   NaN  Greene County           NaN   \n",
-       "freq             NaN       482         13   NaN             84           NaN   \n",
-       "mean    51783.884676       NaN        NaN   NaN            NaN  1.410105e+05   \n",
-       "std     23318.881500       NaN        NaN   NaN            NaN  9.110066e+04   \n",
-       "min       705.000000       NaN        NaN   NaN            NaN  1.526200e+04   \n",
-       "25%     36075.000000       NaN        NaN   NaN            NaN  8.510100e+04   \n",
-       "50%     54006.000000       NaN        NaN   NaN            NaN  1.170570e+05   \n",
-       "75%     68828.000000       NaN        NaN   NaN            NaN  1.692170e+05   \n",
-       "max     99833.000000       NaN        NaN   NaN            NaN  1.769499e+06   \n",
-       "\n",
-       "             Zipcode    Population    Median Age  Household Income  \\\n",
-       "count    6989.000000   6989.000000  6.989000e+03      6.989000e+03   \n",
-       "unique           NaN           NaN           NaN               NaN   \n",
-       "top              NaN           NaN           NaN               NaN   \n",
-       "freq             NaN           NaN           NaN               NaN   \n",
-       "mean    51783.884676   2452.674202 -6.009398e+06     -3.896688e+07   \n",
-       "std     23318.881500   3344.868668  6.301389e+07      1.565063e+08   \n",
-       "min       705.000000      0.000000 -6.666667e+08     -6.666667e+08   \n",
-       "25%     36075.000000    453.000000  3.970000e+01      3.857100e+04   \n",
-       "50%     54006.000000   1181.000000  4.480000e+01      4.800000e+04   \n",
-       "75%     68828.000000   2903.000000  5.100000e+01      5.675000e+04   \n",
-       "max     99833.000000  34366.000000  8.810000e+01      1.807270e+05   \n",
-       "\n",
-       "        Per Capita Income  Poverty Count  Poverty Rate  \n",
-       "count        6.934000e+03    6989.000000   6969.000000  \n",
-       "unique                NaN            NaN           NaN  \n",
-       "top                   NaN            NaN           NaN  \n",
-       "freq                  NaN            NaN           NaN  \n",
-       "mean        -1.896156e+06     390.662040     14.919540  \n",
-       "std          3.575637e+07     631.664106     10.383842  \n",
-       "min         -6.666667e+08       0.000000      0.000000  \n",
-       "25%          2.166625e+04      50.000000      8.125963  \n",
-       "50%          2.587150e+04     155.000000     13.169533  \n",
-       "75%          3.025600e+04     444.000000     19.540230  \n",
-       "max          2.172870e+05   10010.000000    100.000000  "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "zillow_zhvi_metro_df = zillow_zhvi_latest_df.loc[zillow_zhvi_latest_df[\"Metro\"].isna() == False]\n",
-    "zillow_zhvi_suburb_df = zillow_zhvi_latest_df.loc[zillow_zhvi_latest_df[\"Metro\"].isna() == True]\n",
-    "zc_combined_metro = pd.merge(zillow_zhvi_metro_df, census_data, left_on='RegionName', right_on='Zipcode', how=\"inner\")\n",
-    "zc_combined_suburb = pd.merge(zillow_zhvi_suburb_df, census_data, left_on='RegionName', right_on='Zipcode', how=\"inner\")\n",
-    "zc_combined_suburb.describe(include='all')"
+    "zillow_zhvi_metro_df = zc_combined.loc[zc_combined[\"Metro\"].isna() == False]\n",
+    "zillow_zhvi_suburb_df = zc_combined.loc[zc_combined[\"Metro\"].isna() == True]\n",
+    "#zc_combined_metro = pd.merge(zillow_zhvi_metro_df, census_data, left_on='RegionName', right_on='Zipcode', how=\"inner\")\n",
+    "#zc_combined_suburb = pd.merge(zillow_zhvi_suburb_df, census_data, left_on='RegionName', right_on='Zipcode', how=\"inner\")\n",
+    "#zc_combined_suburb.describe(include='all')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "zc_combined_metro.to_csv(\"Output/zillow_census_metro.csv\", index=False, header=True)\n",
-    "zc_combined_suburb.to_csv(\"Output/zillow_census_suburb.csv\", index=False, header=True)"
+    "zillow_zhvi_metro_df.to_csv(\"Output/zillow_census_metro.csv\", index=False, header=True)\n",
+    "zillow_zhvi_suburb_df.to_csv(\"Output/zillow_census_suburb.csv\", index=False, header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -997,7 +736,7 @@
        "[5 rows x 308 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,9 +749,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>Metro</th>\n",
+       "      <th>CountyName</th>\n",
+       "      <th>City</th>\n",
+       "      <th>RegionName</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6125</th>\n",
+       "      <td>AK</td>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>Anchorage Borough</td>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>99501</td>\n",
+       "      <td>1996-01-31</td>\n",
+       "      <td>117115.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36422</th>\n",
+       "      <td>AK</td>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>Anchorage Borough</td>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>99501</td>\n",
+       "      <td>1996-02-29</td>\n",
+       "      <td>117157.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66719</th>\n",
+       "      <td>AK</td>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>Anchorage Borough</td>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>99501</td>\n",
+       "      <td>1996-03-31</td>\n",
+       "      <td>117241.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97016</th>\n",
+       "      <td>AK</td>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>Anchorage Borough</td>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>99501</td>\n",
+       "      <td>1996-04-30</td>\n",
+       "      <td>117308.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127313</th>\n",
+       "      <td>AK</td>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>Anchorage Borough</td>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>99501</td>\n",
+       "      <td>1996-05-31</td>\n",
+       "      <td>117322.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       State      Metro         CountyName       City  RegionName        Date  \\\n",
+       "6125      AK  Anchorage  Anchorage Borough  Anchorage       99501  1996-01-31   \n",
+       "36422     AK  Anchorage  Anchorage Borough  Anchorage       99501  1996-02-29   \n",
+       "66719     AK  Anchorage  Anchorage Borough  Anchorage       99501  1996-03-31   \n",
+       "97016     AK  Anchorage  Anchorage Borough  Anchorage       99501  1996-04-30   \n",
+       "127313    AK  Anchorage  Anchorage Borough  Anchorage       99501  1996-05-31   \n",
+       "\n",
+       "           Value  \n",
+       "6125    117115.0  \n",
+       "36422   117157.0  \n",
+       "66719   117241.0  \n",
+       "97016   117308.0  \n",
+       "127313  117322.0  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Transpose the columns of dates to rows\n",
     "zillow_zhvi_his_df = zillow_zhvi_df.melt(id_vars = ['RegionName', 'State','City','Metro','CountyName'], var_name = 'Date', value_name = 'Value').sort_values('RegionName')\n",
@@ -1020,7 +865,8 @@
     "zillow_zhvi_his_df = zillow_zhvi_his_df.sort_values(by=['State','Metro','CountyName','City','RegionName','Date'])\n",
     "# seperate the data by if they have metro value or not\n",
     "zillow_zhvi_his_metro_df = zillow_zhvi_his_df.loc[zillow_zhvi_his_df[\"Metro\"].isna() == False]\n",
-    "zillow_zhvi_his_suburb_df = zillow_zhvi_his_df.loc[zillow_zhvi_his_df[\"Metro\"].isna() == True]"
+    "zillow_zhvi_his_suburb_df = zillow_zhvi_his_df.loc[zillow_zhvi_his_df[\"Metro\"].isna() == True]\n",
+    "zillow_zhvi_his_df.head()"
    ]
   },
   {
@@ -1046,6 +892,18 @@
    "display_name": "PythonData",
    "language": "python",
    "name": "pythondata"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
