--- a/Income vs Housing Prices.ipynb
+++ b/Income vs Housing Prices.ipynb
@@ -584,9 +584,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData]",
+   "display_name": "PythonData",
    "language": "python",
-   "name": "conda-env-PythonData-py"
+   "name": "pythondata"
   },
   "language_info": {
    "codemirror_mode": {
@@ -598,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
